refactor: rename presign image to initiate image upload
